[package]
name = "blue-marshal-wasm"
# Kept in lockstep with the root crate's version - see .github/workflows/publish.yml.
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen shim over blue-marshal, published to npm as @truebrain/blue-marshal"
license = "MIT"
repository = "https://github.com/TrueBrain/blue-marshal-rs"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.104"
serde_json = "1"

[dependencies.blue-marshal]
path = ".."

[workspace]
