[package]
name = "blue-marshal-wasm"
version = "0.0.0-dev"
edition = "2021"
description = "WASM-port of carbonengine's blue.Marshal"
license = "MIT"
repository = "https://github.com/TrueBrain/blue-marshal-rs"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.104"
serde_json = "1"

[dependencies.blue-marshal]
path = ".."

[workspace]
